add footer and ui changes

--- a/surveyapp/templates/authentication/login.html
+++ b/surveyapp/templates/authentication/login.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+{% comment %} <!DOCTYPE html>
 <html>
 <head>
     <title>Login</title>
@@ -23,4 +23,184 @@
         </ul>
     {% endif %}
 </body>
+</html>
+ {% endcomment %}
+
+
+
+
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <title>Donor Survey Form</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: Arial, sans-serif;
+            background: #dbe3e3;
+            
+        }
+
+        .container {
+            display: flex;
+            flex-direction: column;
+            align-items: stretch;
+            {% comment %} background: #d4ebf1; {% endcomment %}
+            background:rgb(173, 176, 164);
+            border-radius: 10px;
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+            border: 1px solid #ddd;
+            max-width: 800px;
+            margin-top: 5px;
+            overflow: hidden;
+            margin-top:160px;
+
+{% comment %} 
+            /* Center vertically */
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%); {% endcomment %}
+        }
+
+        .form-container {
+            padding: 30px;
+        }
+
+        .form-container h2 {
+            margin-bottom: 20px;
+            text-align: center;
+            font-weight:bold;
+            {% comment %} color:white; {% endcomment %}
+        }
+
+        .form-container h5 {
+            margin-bottom: 20px;
+            text-align: center;
+        }
+
+        .form-container label {
+            font-weight: bold;
+            display: block;
+            margin-bottom: 5px;
+        }
+
+        .form-container input,
+        .form-container select,
+        .form-container textarea {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 20px;
+            border: 1px solid #ccc;
+            border-radius: 8px;
+            box-sizing: border-box;
+        } 
+
+        .form-container button {
+            width: 100%;
+            padding: 10px;
+            font-size: 16px;
+            background-color: #003240e3;
+            color: #fff;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        .form-container button:hover {
+            background-color: #0056b3;
+        }
+
+        .form-container input[type="radio"] {
+            margin-right: 10px;
+        }
+
+        .error {
+            color: red; /* Change the color of the error message */
+            font-size: 14px; /* Change the font size */
+            font-weight: bold; /* Optional: Makes the error bold */
+            margin-top: 5px; /* Adds some space between the field and error message */
+        }
+
+        /* Footer Styles */
+        footer {
+            {% comment %} background-color: rgb(53 124 134); {% endcomment %}
+            background-color: rgb(50 139 151);
+            color: white;
+
+            text-align: center;
+            padding: 20px;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+        
+        footer p {
+            margin: 5px 0;
+            font-size: 16px;
+        }
+
+        @media (max-width: 768px) {
+
+
+            .form-container {
+                padding: 20px;
+            }
+
+            footer p {
+                font-size: 14px; /* Smaller font size for smaller screens */
+            }
+        }
+    </style>
+</head>
+
+<body>
+    <div class="container">
+        <!-- Image Div -->
+        <div class="image-container"></div>
+
+        <!-- Form Div -->
+        <div class="form-container">
+            <h2>Welcome to JivanuTX</h2>
+            <h5>Login to dashboard to export donor survey collection form data.</h5>
+            <form method="POST">
+                {% csrf_token %}
+                <label for="username">Username:</label>
+                <input type="text" name="username" id="username" required>
+                <br>
+                <label for="password">Password:</label>
+                <input type="password" name="password" id="password" required>
+                <br>
+                <button type="submit">Login</button>
+            </form>
+            {% if messages %}
+                <ul>
+            {% for message in messages %}
+                <li>{{ message }}</li>
+                {% endfor %}
+                </ul>
+            {% endif %}
+
+            </div>
+        </div>
+    </div>
+
+
+
+    <!-- Footer Section -->
+<footer>
+    <p>Powered by Winline Technologies Private Limited</p>
+    <p>Contact us at: <a href="https://www.winlinetech.com/" target="_blank" style="color: #fff;">www.winlinetech.com</a></p>
+</footer>
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+
 </html>
