--- a/surveyapp/templates/page3.html
+++ b/surveyapp/templates/page3.html
@@ -915,6 +915,18 @@
         });
     });
 </script>    
+
+
+<!-- JavaScript to focus on error field-->
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+        const errorField = document.querySelector('.error');
+        if (errorField) {
+            errorField.scrollIntoView({ behavior: 'smooth', block: 'center' });
+        }
+    });
+</script>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
