--- a/surveyapp/templates/page1.html
+++ b/surveyapp/templates/page1.html
@@ -16,7 +16,7 @@
     <div class="container">
         <!-- Image Div -->
         <div class="image-container">
-            <img src="" alt="hero-image" />
+            <img src="/media/img2.jpg" alt="hero-image" />
         </div>
 
         <!-- Form Div -->
