delete all files and modify archetecture of app

--- a/static/css/all.css
+++ b/static/css/all.css
@@ -100,6 +100,14 @@ footer p {
 }
 
 
+
+#gender-image-container img {
+max-width: 100%; /* Ensure the image does not overflow its container */
+height: auto; /* Maintain aspect ratio */
+
+}
+
+
 @media (max-width: 768px) {
     .image-container {
         height: 250px;
