--- a/surveyapp/templates/message.html
+++ b/surveyapp/templates/message.html
@@ -1,4 +1,4 @@
-<!-- survey/templates/survey/message.html -->
+succe<!-- survey/templates/survey/message.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,7 +7,6 @@
     <title>Survey Progress</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/styles.css">
 </head>
 <body class="bg-light">
     <div class="container vh-100 d-flex justify-content-center align-items-center">
