--- a/surveyapp/templates/page1.html
+++ b/surveyapp/templates/page1.html
@@ -7,8 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    {% comment %} <link rel="stylesheet" href="/styles.css"> {% endcomment %}
-    <link rel="stylesheet" href="{% static 'all.css' %}">
+    <link rel="stylesheet" href="{% static 'css/all.css' %}">
     <title>Donor Selection Form</title>
 </head>
 
@@ -17,8 +16,9 @@
     <div class="container">
         <!-- Image Div -->
         <div class="image-container">
-            <img src="/media/img1.jpg" alt="image" />
+            <img src="https://jivanutx.com/images/survery-form-header-image600x400.jpg" alt="image" />
         </div>
+
 
         <!-- Form Div -->
         <div class="form-container">
