--- a/surveyapp/templates/page2.html
+++ b/surveyapp/templates/page2.html
@@ -8,14 +8,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'all.css' %}">
+    <link rel="stylesheet" href="{% static 'css/all.css' %}">
     <title>Donor Survey Form</title>
 </head>
 
 <body>
     <div class="container">
         <!-- Image Div -->
-        <div class="image-container"></div>
+        <div class="image-container">
+            <img src="https://jivanutx.com/images/survery-form-header-image600x400.jpg" alt="image" />
+        </div>
 
         <!-- Form Div -->
         <div class="form-container">
