--- a/surveyapp/templates/page3.html
+++ b/surveyapp/templates/page3.html
@@ -8,14 +8,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'all.css' %}">
+    <link rel="stylesheet" href="{% static 'css/all.css' %}">
     <title>Donor Survey Form</title>
 </head>
 
 <body>
     <div class="container">
         <!-- Image Div -->
-        <div class="image-container"></div>
+        <div class="image-container">
+            <img src="https://jivanutx.com/images/survery-form-header-image600x400.jpg" alt="image" />
+        </div>
 
         <!-- Form Div -->
         <div class="form-container">
@@ -115,10 +117,19 @@
                     {% endif %}
                 </div>
 
-
+ 
                 <div class="mb-2">
                     <label for="id_body_fat_percentage" class="form-label">34. Can you guess your body fat percentage...?</label>
                     {{ form.body_fat_percentage }}
+
+                    <div id="gender-image-container">
+                        {% if gender == "Male" %}
+                            <img src='https://jivanutx.com/images/male-body-fat-percentage.jpg' alt="Male Body Fat Levels" >
+                        {% elif gender == "Female" %}
+                            <img src="https://jivanutx.com/images/female-body-fat-percentage.jpg" alt="Female Body Fat Levels" >
+                        {% endif %}
+                    </div>
+
                     {% if form.body_fat_percentage.errors %}
                     <div class="error">
                         {% for error in form.body_fat_percentage.errors %}
@@ -582,7 +593,6 @@
         </div>
     </div>
 
-    <p>Gender: {{ gender }}</p>
 
 <!-- Footer Section -->
 <footer>
@@ -595,9 +605,6 @@
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 
   
-<script>
-
-</script
 
 
 
