fix problem in 53 no question

--- a/surveyapp/templates/message.html
+++ b/surveyapp/templates/message.html
@@ -1,4 +1,4 @@
-succe<!-- survey/templates/survey/message.html -->
+<!-- survey/templates/survey/message.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
