--- a/surveyapp/templates/page3.html
+++ b/surveyapp/templates/page3.html
@@ -388,9 +388,10 @@
                     {% endif %}
                 </div>
 
-
                 <div class="mb-2">
-                    <label for="id_meals_per_day" class="form-label">52. How many meals do you eat in a day?</label>
+                    <label for="id_meals_per_day" class="form-label">
+                        52. How many meals do you eat in a day?
+                    </label>
                     {{ form.meals_per_day }}
                     {% if form.meals_per_day.errors %}
                     <div class="error">
@@ -400,10 +401,11 @@
                     </div>
                     {% endif %}
                 </div>
-
-
+                
                 <div class="mb-2">
-                    <label for="id_snacks_per_day" class="form-label"53. How many snacks do you eat in a day?</label>
+                    <label for="id_snacks_per_day" class="form-label">
+                        53. How many snacks do you eat in a day?
+                    </label>
                     {{ form.snacks_per_day }}
                     {% if form.snacks_per_day.errors %}
                     <div class="error">
@@ -413,6 +415,7 @@
                     </div>
                     {% endif %}
                 </div>
+                
 
 
                 <div class="mb-2">
